[CHORE] 파일 업로드를 위해서 COS.jar 라이브러리 추가

--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,12 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.36</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/servlets.com/cos -->
+        <dependency>
+            <groupId>servlets.com</groupId>
+            <artifactId>cos</artifactId>
+            <version>05Nov2002</version>
+        </dependency>
     </dependencies>
 
     <build>
